# tree-similarity

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  REMEMBERME.md  doxygen.config
src/: CMakeLists.txt  Makefile  Node.h  README.md  StringEditDistance.cc  TODO.txt  TreeEditDistance.h  array_2d.h  common.h  custom_node.cc  custom_node.h  k_heap.h  lbl_tree.cc  lbl_tree.h  node.cc  node.h  node_distance_pair.h  parser.h  string_edit_distance.cc  string_edit_distance.h  string_node.h  ted.h  ted_context.cc  ted_context.h  tree.h  tree_edit_distance.cc  tree_edit_distance.h  tree_edit_distance_strategy.h  tree_similarity  tree_similarity.cc  tree_similarity.h  upper_bound.cc  upper_bound.h  zhang_shasha.cc  zhang_shasha.h
src/command_line/: CMakeLists.txt  main.cc  main.h
src/common/: common.h
src/cost_model/: unit_cost_model.h  unit_cost_model_impl.h
src/data_structures/: array_2d.h  btree.h  dewey_identifier.h  k_heap.h  matrix.h  posting_list_container.h  stack.h
src/indices/: label_index.h  node_index.h
src/join/: CMakeLists.txt  join_result_element.h  naive_self_join.h  naive_self_join_impl.h
src/json/: jedi_algorithm.h  jedi_baseline_index.h  jedi_baseline_index_impl.h  jofilter_index.h  jofilter_index_impl.h  quickjedi_index.h  quickjedi_index_impl.h  wang_index.h  wang_index_impl.h
src/label/: json_label.h  json_label_impl.h  label_dictionary.h  label_dictionary_impl.h  string_label.cc  string_label.h  string_label_impl.h
src/lookup/: lookup_result_element.h
src/node/: binary_node.h  binary_node_impl.h  node.h  node_impl.h  tree_indexer.h  tree_indexer_impl.h
src/nodes/: custom_node.h  custom_node_data.h  hybrid_node.h  node.h  string_node.h  string_node_data.h
src/parser/: bracket_notation_parser.h  bracket_notation_parser_impl.h  parser.h
src/rted/: rted.h
src/sed/: string_edit_distance.h
src/structure_search/: structure_search.h
src/tasm/: ring_buffer.h  tasm.h
src/ted/: CMakeLists.txt  apted.h  apted_impl.h  apted_tree_index.h  apted_tree_index_impl.h  command_line.cc  command_line.h  ted_algorithm.h  ted_algorithm_touzet.h  touzet.h  touzet_baseline_tree_index.h  touzet_baseline_tree_index_impl.h  touzet_depth_pruning_tree_index.h  touzet_depth_pruning_tree_index_impl.h  touzet_depth_pruning_truncated_tree_fix_tree_index.h  touzet_depth_pruning_truncated_tree_fix_tree_index_impl.h  touzet_impl.h  touzet_kr_loop_tree_index.h  touzet_kr_loop_tree_index_impl.h  touzet_kr_set_tree_index.h  touzet_kr_set_tree_index_impl.h  zhang_shasha.h  zhang_shasha_impl.h  zhang_shasha_tree_index.h  zhang_shasha_tree_index_impl.h
src/ted_lb/: bitmap_filter.h  bitmap_filter_impl.h  label_intersection.h  label_intersection_impl.h  sed_lb.h  sed_lb_impl.h  sed_tree_index.h  sed_tree_index_impl.h
src/ted_ub/: cted_tree_index.h  cted_tree_index_impl.h  cted_ub.h  cted_ub_impl.h  dodpjed_index.h  dodpjed_index_impl.h  dpjed_index.h  dpjed_index_impl.h  greedy_ub.h  greedy_ub_impl.h  lgm_tree_index.h  lgm_tree_index_impl.h  modpjed_index.h  modpjed_index_impl.h  sdpjed_index.h  sdpjed_index_impl.h
src/touzet/: touzet.h  touzet_impl.h
src/tree_generator/: simple_tree_generator.h  simple_tree_generator_impl.h
src/upper_bound/: upper_bound.h
src/v0.1/: LblTree.cc  LblTree.h  LblTree.h~  Makefile  Node.cc  Node.cc~  Node.h  SpecializedTree.cc  SpecializedTree.h  SpecializedTree.h~  StringEditDistance.cc  StringEditDistance.h  TEDContext.cc  TreeEditDistance.h  TreeSimilarity  TreeSimilarity.cc  TreeSimilarity.cc~  UpperBound.cc  UpperBound.cc~  UpperBound.h  UpperBound.h~  ZhangShasha.cc  ZhangShasha.h  main_tree.cc  tree.cc  tree.cc~  tree.h  tree.h~
src/v0.2/: main.cc  node.h  ted.h  tree.h
src/visualisation/: visualisation.h  visualise.h
src/wrappers/: node_distance_pair.h  node_index_value.h  node_prefixes_pair.h
src/zhang_shasha/: zhang_shasha.h  zhang_shasha_impl.h
test/: CMakeLists.txt  CTestCustom.cmake
test/apted/: CMakeLists.txt  apted_preL_to_size_test.cc  apted_ted_test.cc  apted_ted_test_data.txt
test/common/: to_string_converters.h
test/cted_ub/: CMakeLists.txt  cted_ub_ted_test.cc  cted_ub_ted_test_data.txt
test/dpjed_ub/: CMakeLists.txt  dpjed_ub_ted_test.cc
test/greedy_ub/: CMakeLists.txt  greedy_ub_depth_test.cc  greedy_ub_depth_test_data.txt  greedy_ub_label_il_test.cc  greedy_ub_label_il_test_data.txt  greedy_ub_lb_fill_gaps_test.cc  greedy_ub_lb_fill_gaps_test_data.txt  greedy_ub_lb_mapping_test.cc  greedy_ub_lb_mapping_test_data.txt  greedy_ub_mapping_test.cc  greedy_ub_mapping_test_data.txt  greedy_ub_parent_test.cc  greedy_ub_parent_test_data.txt  greedy_ub_post_to_pre_test.cc  greedy_ub_post_to_pre_test_data.txt  greedy_ub_pre_to_post_test.cc  greedy_ub_pre_to_post_test_data.txt  greedy_ub_rch_test.cc  greedy_ub_rl_test.cc  greedy_ub_rl_test_data.txt  greedy_ub_size_test.cc  greedy_ub_ted_test.cc
test/jedi_baseline/: CMakeLists.txt  jedi_baseline_test.cc  jedi_baseline_test_results.txt
test/jedi_quickjedi/: CMakeLists.txt  jedi_quickjedi_test.cc
test/jediorder_jofilter/: CMakeLists.txt  jediorder_jofilter_test.cc  jediorder_jofilter_test_data.txt
test/jediorder_wang/: CMakeLists.txt  jediorder_wang_test.cc
test/join/: CMakeLists.txt  bb_join_test.cc  dh_join_test.cc  guha_test.cc  guha_test_data.txt  histo_join_test.cc  join_test_data_129.txt  join_test_data_20.txt  join_test_data_299.txt  join_test_results_129.txt  join_test_results_20.txt  join_test_results_299.txt  ldh_join_test.cc  lh_join_test.cc  naive_join_test.cc  naive_join_test_data.txt  naive_self_join_test.cc  t_join_test.cc  tang_join_test.cc  ted_join_test.cc
test/json_label/: CMakeLists.txt  json_label_test.cc  json_label_test_results.txt
test/lgm_ub/: CMakeLists.txt  lgm_ub_lb_fill_gaps_test.cc  lgm_ub_lb_fill_gaps_test_data.txt  lgm_ub_lb_mapping_test.cc  lgm_ub_lb_mapping_test_data.txt
test/li_lb/: CMakeLists.txt  li_lb_test.cc  li_lb_test_data.txt  li_lb_test_results.txt
test/node/: CMakeLists.txt  inverted_list_depth_to_postl_test_data.txt  inverted_list_label_id_to_postl_test_data.txt  (+29 more)
(+131 files in other folders)
